small perf tweak, fix failing tests due to data updates